login flow fixed removed boilerplate code (overengineered)

--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -16,5 +16,7 @@
     <string name="home_cart">سبد خرید</string>
     <string name="home_profile">پروفایل</string>
     <string name="tour_detail_title_prerequisites">وسایل مورد نیاز</string>
+    <string name="message_login_failure">خطا</string>
+    <string name="message_login_success">ورود موفق</string>
 
 </resources>
