--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -18,12 +18,12 @@
     <string name="tour_detail_title_prerequisites">وسایل مورد نیاز</string>
     <string name="message_login_failure">خطا</string>
     <string name="message_login_success">ورود موفق</string>
-    <string name="tour_detail_review_count">'(%d نظر)'</string>
+    <string name="tour_detail_review_count">(%s نظر)</string>
     <string name="tour_detail_guide_label">راهنمای رسمی</string>
     <string name="tour_detail_description_label">توضیحات</string>
     <string name="tour_detail_highlights_label">خدمات و ویژگی‌های سفر</string>
     <string name="tour_detail_duration_label">مدت زمان</string>
-    <string name="tour_detail_duration_value">'%d ساعت'</string>
+    <string name="tour_detail_duration_value">%s ساعت</string>
     <string name="tour_detail_level_label">درجه سختی</string>
     <string name="tour_detail_due_date">تاریخ برگزاری</string>
     <string name="tour_detail_start_time_label">ساعت شروع</string>
