--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,7 @@
     <string name="label_attraction_detail_mail">Email</string>
     <string name="label_attraction_detail_working_time">Working Time</string>
     <string name="label_attraction_detail_address">Address</string>
+    <string name="label_home_guide_tours_stat">Tours</string>
+    <string name="label_home_guide_people_signed_up">This Week</string>
+    <string name="label_home_guide_people_views">Views</string>
 </resources>
