completed attraction with reviews and related tours added compose new review or comment renamed Profile model to User
streamlined viewState screens

--- a/app/src/main/res/values-fa/strings.xml
+++ b/app/src/main/res/values-fa/strings.xml
@@ -64,5 +64,9 @@
     <string name="description_error">مسیر رو گم کردیم!</string>
     <string name="label_error_return">برگردیم</string>
     <string name="description_empty">شهر خلوته</string>
+    <string name="label_attraction_detail_button_book">رزرو تور</string>
+    <string name="label_attraction_detail_related_tours">تورهای این جاذبه</string>
+    <string name="label_attraction_detail_reviews">نظر کاربران</string>
+    <string name="label_attraction_detail_new_review">ثبت دیدگاه</string>
 
 </resources>
